# lorem

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: HELP.txt  main.rs  options.rs  randstr.rs
